Store operator summaries in MysqlEventListener